--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "pg": "^8.2.1",
+    "socket.io": "^2.3.0",
     "util": "^0.12.3",
     "youtube-mp3-downloader": "^0.7.0",
     "yt-search": "^2.1.3"
