--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "pg": "^8.2.1",
     "socket.io": "^2.3.0",
     "util": "^0.12.3",
-    "youtube-mp3-downloader": "^0.7.0",
+    "youtube-audio-stream": "^0.3.6",
     "yt-search": "^2.1.3"
   }
 }
