--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "socket.io": "^2.3.0",
     "util": "^0.12.3",
     "youtube-audio-stream": "^0.3.6",
-    "yt-search": "^2.1.9"
+    "yt-search": "^2.1.9",
+    "ytdl-core": "^3.2.2"
   }
 }
