--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "apollo-server-express": "^2.14.1",
-    "bandcamp-scraper": "^1.2.5",
+    "amazon-cognito-identity-js": "^4.3.4",
+    "aws-sdk": "^2.742.0",
+    "bandcamp-scraper": "^1.2.6",
+    "body-parser": "^1.19.0",
+    "cognito-express": "^2.0.18",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,12 +18,15 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.4",
     "morgan": "~1.9.1",
-    "pg": "^8.2.1",
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "util": "^0.12.3",
     "youtube-audio-stream": "^0.3.6",
-    "yt-search": "^2.1.9",
     "ytdl-core": "^3.2.2"
   }
 }
