--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.4",
     "linez": "^4.1.4",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
     "scrape-it": "^3.3.2",
@@ -33,6 +34,6 @@
     "tinyreq": "^3.2.5",
     "util": "^0.12.3",
     "youtube-audio-stream": "^0.3.6",
-    "ytdl-core": "^3.2.2"
+    "ytdl-core": "^3.4.0"
   }
 }
