--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "fluent-ffmpeg": "^2.1.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "json5": "^0.5.1",
@@ -31,9 +32,9 @@
     "request": "^2.88.2",
     "scrape-it": "^3.3.2",
     "socket.io": "^2.3.0",
+    "stream": "0.0.2",
     "tinyreq": "^3.2.5",
     "util": "^0.12.3",
-    "youtube-audio-stream": "^0.3.6",
     "ytdl-core": "^4.0.0"
   }
 }
