--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwk-to-pem": "^2.0.4",
     "linez": "^4.1.4",
     "moment": "^2.29.1",
+    "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
@@ -35,6 +36,6 @@
     "stream": "0.0.2",
     "tinyreq": "^3.2.5",
     "util": "^0.12.3",
-    "ytdl-core": "^4.0.0"
+    "ytdl-core": "^4.0.2"
   }
 }
