added bandcamp stream

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "stream": "0.0.2",
     "tinyreq": "^3.2.5",
     "util": "^0.12.3",
+    "when": "^3.7.8",
     "ytdl-core": "^4.0.6"
   }
 }
