--- a/package.json
+++ b/package.json
@@ -6,19 +6,15 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "ajv": "^4.11.8",
     "amazon-cognito-identity-js": "^4.3.4",
     "aws-sdk": "^2.742.0",
-    "bandcamp-scraper": "^1.2.7",
     "body-parser": "^1.19.0",
-    "cheerio": "^0.22.0",
     "cognito-express": "^2.0.18",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fluent-ffmpeg": "^2.1.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "json5": "^0.5.1",
@@ -32,11 +28,8 @@
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
     "scrape-it": "^3.3.2",
-    "socket.io": "^2.3.0",
     "stream": "0.0.2",
     "tinyreq": "^3.2.5",
-    "util": "^0.12.3",
-    "when": "^3.7.8",
-    "ytdl-core": "^4.0.6"
+    "util": "^0.12.3"
   }
 }
